--- a/wagtail_ace_editor/templates/wagtail_ace_editor/ace_editor.html
+++ b/wagtail_ace_editor/templates/wagtail_ace_editor/ace_editor.html
@@ -4,18 +4,22 @@
     {% if widget.label %}
     <label for="{{widget.attrs.id}}"><strong>{{widget.label}}:</strong></label>
     {% endif %}
-
-    <div class="ace-editor-preview-wrapper" id="{{widget.attrs.id}}-preview-wrapper"></div>
+    
+    {% if not disable_preview %}
+        <div class="ace-editor-preview-wrapper" id="{{widget.attrs.id}}-preview-wrapper"></div>
+    {% endif %}
 
     <div id="{{widget.attrs.id}}-wrapper" class="ace-editor-widget-wrapper">
         <textarea id="{{widget.attrs.id}}" name="{{widget.name|default:widget.attrs.id}}" ace-editor-input {% for k, v in widget.attrs.items %}{{k}}="{{v}}"{%endfor%}>{{widget.value|safe}}</textarea>
         
         <div id="{{widget.attrs.id}}-editor"></div>
         
-        <div class="ace-editor-widget-preview-button">
-            <label for="{{widget.attrs.id}}-preview-text">{% translate "Preview:" %}</label>
-            <input type="checkbox" id="{{widget.attrs.id}}-preview-check">
-        </div>
+        {% if not disable_preview %}
+            <div class="ace-editor-widget-preview-button">
+                <label for="{{widget.attrs.id}}-preview-text">{% translate "Preview:" %}</label>
+                <input type="checkbox" id="{{widget.attrs.id}}-preview-check">
+            </div>
+        {% endif %}
     </div>
 
 </div>
